--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  width: 100vw;
+  height: 100vh;
+  background: black;
+  color: white;
+}
+
+.contents{
+  color: white;
+  border: 1px solid red;
 }
 
 .App-logo {
@@ -36,3 +45,396 @@
     transform: rotate(360deg);
   }
 }
+.algorithmChartArea{
+  width: 100%;
+  height:30%;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  /* display: flex; */
+  /* height: 50px; */
+  /* height: 30vh; */
+  /* background-color: red; */
+  display: flex;
+  /* padding-bottom: 10px; */
+}
+.brushChartArea{
+  width: 100%;
+  height:18.5%;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+/* background-color: #61dafb; */
+display: flex;
+}
+.filterChip{
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right:10px ;
+  height: 18px;
+  background-color: black;
+  font-size: 12px;
+  display: flex;
+  color: white;
+  cursor: pointer;
+}
+.filterContent{
+  color: #606060;
+}
+.filterAddBtn{
+  align-content: center;
+  margin-top: 10px;
+  cursor: pointer;
+  border-radius: 20px;
+  height:20px; 
+  width: 80px;
+  background-color: black;
+  border: 1px solid transparent;
+  color: white;
+}
+.filterAddBtn:hover{
+  transition: 0.5s;
+border: 1px solid white;
+}
+
+.filterDeleteBtn{
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  /* padding-bottom: 1px; */
+}
+.filterArea{
+  display: flex;
+  flex-direction: row;
+}
+.gridRowTitle{
+display: flex;
+/* margin-left: 10px; */
+/* justify-content: space-between; */
+padding-left: 6px;
+padding-right: 6px;
+background-color: black;
+border-bottom: 1px solid white;
+  /* padding: 6px; */
+}
+.gridRowContent{
+  display: flex;
+  /* margin-left: 10px; */
+  /* justify-content: space-between; */
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-top: 6px;
+  /* background-color: black; */
+  }
+.grid{
+  /* padding-right: 10px; */
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
+  border:1px solid white;
+  position: absolute;
+  top:30px;
+  width: 96%;
+}
+li{
+  display: flex;
+  list-style: none;
+}
+.tile{
+  display: flex;
+  width: 120px;
+}
+.datePicker{
+  display: flex;
+}
+input[type=text]{
+  width: 100px;
+  margin-left: 10px;
+  margin-right: 10px;
+
+}
+.selectArea{
+  display: flex;
+  flex-direction: row;
+  margin: 6px;
+}
+.cancelBtn{
+  background-color: black;
+  color: white;
+  font-size: 12px;
+  width: 100px;
+  padding-left: 18px;
+  padding-right: 18px;
+  border: none;
+  border-radius: 20px;
+  margin-right: 6px;
+  cursor: pointer;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  margin-left: 10px;
+  transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
+  box-shadow: 0 2px 25px black;
+}
+.applyBtn{
+  width: 100px;
+  background-color: #1467c0;
+  color:white;
+  font-size: 12px;
+  padding-left: 18px;
+  padding-right: 18px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  /*여기부터는 버튼 이펙트*/
+  transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
+  box-shadow: 0 2px 25px #1467c0;
+}
+.applyBtn:focus { outline: 0; }
+.applyBtn:before, .applyBtn:after {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 140%;
+  height: 100%;
+  left: -20%;
+  z-index: -1000;
+  transition: all ease-in-out 0.5s;
+  background-repeat: no-repeat;
+}
+.applyBtn:before {
+  display: none;
+  top: -75%;
+  background-image: radial-gradient(circle, #1467c0 20%, transparent 20%),
+   radial-gradient(circle, transparent 20%, #1467c0 20%, transparent 30%),
+   radial-gradient(circle, #1467c0 20%, transparent 20%), 
+   radial-gradient(circle, #1467c0 20%, transparent 20%), 
+   radial-gradient(circle, transparent 10%, #1467c0 15%, transparent 20%), 
+   radial-gradient(circle, #1467c0 20%, transparent 20%), 
+   radial-gradient(circle, #1467c0 20%, transparent 20%),
+   radial-gradient(circle, #1467c0 20%, transparent 20%),
+   radial-gradient(circle, #1467c0 20%, transparent 20%);
+  background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%,
+   10% 10%, 18% 18%;
+}
+ .applyBtn:after {
+  display: none;
+  bottom: -75%;
+  background-image: radial-gradient(circle, #1467c0 20%, transparent 20%),
+   radial-gradient(circle, #1467c0 20%, transparent 20%), 
+   radial-gradient(circle, transparent 10%, #1467c0 15%, transparent 20%), 
+   radial-gradient(circle, #1467c0 20%, transparent 20%),
+   radial-gradient(circle, #1467c0 20%, transparent 20%),
+   radial-gradient(circle, #1467c0 20%, transparent 20%),
+   radial-gradient(circle, #1467c0 20%, transparent 20%);
+  background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
+}
+
+.applyBtn:active {
+  transform: scale(0.9);
+  background-color: #1467c0;
+  box-shadow: 0 2px 25px #002a56;
+}
+
+.applyBtn.animate:before {
+  display: block;
+  animation: topBubbles ease-in-out 0.75s forwards;
+}
+
+.applyBtn.animate:after {
+  display: block;
+  animation: bottomBubbles ease-in-out 0.75s forwards;
+}
+
+input[type="radio"]:checked {
+  /* margin-left: 10px; */
+  cursor: pointer;
+  accent-color: #1467c0;
+  
+}
+.btnArea{
+  display: flex;
+  justify-content: end;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
+.cancelBtn:focus { outline: 0; }
+.cancelBtn:before, .cancelBtn:after {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 140%;
+  height: 100%;
+  left: -20%;
+  z-index: -1000;
+  transition: all ease-in-out 0.5s;
+  background-repeat: no-repeat;
+}
+.cancelBtn:before {
+  display: none;
+  top: -75%;
+  background-image: radial-gradient(circle, black 20%, transparent 20%),
+   radial-gradient(circle, transparent 20%, black 20%, transparent 30%),
+   radial-gradient(circle, black 20%, transparent 20%), 
+   radial-gradient(circle, black 20%, transparent 20%), 
+   radial-gradient(circle, transparent 10%, black 15%, transparent 20%), 
+   radial-gradient(circle, black 20%, transparent 20%), 
+   radial-gradient(circle, black 20%, transparent 20%),
+   radial-gradient(circle, black 20%, transparent 20%),
+   radial-gradient(circle, black 20%, transparent 20%);
+  background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%,
+   10% 10%, 18% 18%;
+}
+ .cancelBtn:after {
+  display: none;
+  bottom: -75%;
+  background-image: radial-gradient(circle, black 20%, transparent 20%),
+   radial-gradient(circle, black 20%, transparent 20%), 
+   radial-gradient(circle, transparent 10%, black 15%, transparent 20%), 
+   radial-gradient(circle, black 20%, transparent 20%),
+   radial-gradient(circle, black 20%, transparent 20%),
+   radial-gradient(circle, black 20%, transparent 20%),
+   radial-gradient(circle, black 20%, transparent 20%);
+  background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
+}
+
+.cancelBtn:active {
+  transform: scale(0.9);
+  background-color: black;
+  box-shadow: 0 2px 25px black;
+}
+
+.cancelBtn.animate:before {
+  display: block;
+  animation: topBubbles ease-in-out 0.75s forwards;
+}
+
+.cancelBtn.animate:after {
+  display: block;
+  animation: bottomBubbles ease-in-out 0.75s forwards;
+}
+@keyframes
+topBubbles {  0% {
+ background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 
+ 55% 90%, 70% 90%;
+}
+ 50% {
+ background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 
+ 65% 20%, 90% 30%;
+}
+ 100% {
+ background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%,
+  65% 10%, 90% 20%;
+ background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+}
+}
+@keyframes
+bottomBubbles {  0% {
+ background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
+}
+ 50% {
+ background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
+}
+ 100% {
+ background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
+ background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+}
+/**/
+}
+.clock{
+  color: white;
+  position: absolute;
+right: 10px;
+}
+
+.ring_loader{
+  z-index: 999;
+  position: absolute;
+top: 50%;
+left: 50vw;
+transform: translate(-50%,-50%);
+width: 100px;
+height: 100px;
+align-items: center;
+line-height: 100px;
+font-family: sans-serif;
+font-size: 16px;
+color: cyan;
+letter-spacing: 2px;
+background: transparent;
+/* border: 3px solid #3c3c3c; */
+border-radius: 50%;
+text-align: center;
+text-transform: uppercase;
+text-shadow: 1px 2px 10px cyan;
+box-shadow: 0 0 0 20px rgba(0,0,0,.5);
+background: linear-gradient(0deg, #333, #000);
+box-shadow: 0 0 0 4px  #353535,
+	 0 0 0 5px #3e3e3e,
+	inset 0 0 10px rgba(0,0,0,1), 
+	0 5px 20px rgba(0,0,0,5), 
+	inset 0 0 15px rgba(0,0,0,.2);
+}
+
+.ring_loader:before{
+  content: '';
+  position:absolute;
+  top: -3px;
+  left: -3px;
+  height: 100%;
+  width: 100%;
+  border: 3px solid transparent;
+  border-top: 3px solid cyan;
+  border-right: 3px solid cyan;
+  border-radius: 50%;
+  animation: animateCircle 2s linear infinite;
+  }
+  @keyframes animateCircle{
+    0%{
+      transform: rotate(0deg);
+    }
+    
+    100%{
+      transform: rotate(360deg);
+    }
+    }
+    /* span{
+      display: block;
+      position: absolute;
+      top: calc(50% - 2px);
+      left: 50%;
+      width: 50%;
+      background: transparent;
+      height: 4px;
+      transform-origin: left;
+      animation: animate 2s linear infinite;
+      }
+      
+      span:before{
+      content: '';
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background: cyan;
+      top: -6px;
+      right: -8px;
+      box-shadow: 0 0 20px cyan;} */
+      
+      @keyframes animate{
+
+        0%{
+          transform: rotate(45deg);
+        }
+        
+        100%{
+          transform: rotate(405deg);
+        }}
+        /* .loading_logo{
+          width: 60%;
+        } */
+.loader{
+position: relative;
+        }
